fixed overlap button, now footer is off again but will work on now #5

--- a/style.css
+++ b/style.css
@@ -96,7 +96,6 @@ a{
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 7%;
     background-color: var(--white);
     color: var(--blue);
     padding: 10px;
@@ -113,10 +112,11 @@ a{
 /*HOME BODY STYLE*/
 
 .home-body{
-    height: 83%;
+    height: 100%;
     width: 100%;
     display: flex;
     flex-flow: row wrap;
+    padding-bottom: 150px;
 }
 
 .samples{
@@ -154,7 +154,7 @@ a{
 .upload{
     background-color: var(--red);
     color: var(--white);
-    padding: 2%;
+    padding: 30px;
     display: block;
     margin-left: auto;
     margin-right: auto;
